--- a/package.json
+++ b/package.json
@@ -1,34 +1,65 @@
 {
-  "name": "node-call-tracking",
-  "version": "0.1.0",
+  "name": "sample-voice-nodejs-call-tracking",
+  "version": "1.0.0",
   "description": "A Call Tracking example using the Nexmo Voice API written in Node.",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:nexmo/nexmo-node-call-tracking.git"
-  },
-  "main": "./lib/server.js",
-  "dependencies": {
-    "body-parser": "^1.15.2",
-    "dotenv": "^2.0.0",
-    "express": "^4.14.0",
-    "nexmo": "^1.0.0-beta-7"
-  },
-  "devDependencies": {
-    "expect.js": "^0.3.1",
-    "mocha": "^2.5.3",
-    "nodemon": "^1.9.2"
-  },
-  "scripts": {
-    "test": "mocha test/*-test.js",
-    "start": "nodemon ./lib/server.js",
-    "test-watch": "nodemon mocha test/*-test.js"
-  },
   "keywords": [
     "voice",
-    "nexmo",
+    "vonage",
     "calls",
     "recording"
   ],
-  "author": "Phil Leggetter <phil@leggetter.co.uk> (http://www.leggetter.co.uk)",
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Vonage-Community/sample-voice-nodejs-call-tracking.git"
+  },
+  "license": "MIT",
+  "contributors": [
+    {
+      "name": "Phil Leggetter",
+      "url": "https://github.com/leggetter"
+    },
+    {
+      "name": "Gaspard Beernaert",
+      "url": "https://github.com/gasp"
+    },
+    {
+      "name": "Sky Resendez",
+      "url": "https://github.com/cthulhu-uu"
+    },
+    {
+      "name": "Chuck \"MANCHUCK\" Reeves",
+      "url": "https://github.com/manchuck"
+    },
+    {
+      "name": "Lorna Jane Mitchell",
+      "url": "https://github.com/lornajane"
+    }
+  ],
+  "main": "./lib/server.js",
+  "files": [
+    "lib"
+  ],
+  "scripts": {
+    "eslint": "eslint",
+    "jest": "jest",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "start": "nodemon ./lib/server.js",
+    "test": "jest --silent --verbose",
+    "test:watch": "jest --verbose --silent --watchAll"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "@eslint/js": "9.18.0",
+    "@stylistic/eslint-plugin-js": "2.13.0",
+    "eslint-plugin-jest": "28.11.0",
+    "eslint-plugin-n": "17.15.1",
+    "globals": "15.14.0",
+    "jest": "29.7.0",
+    "nodemon": "^3.1.9"
+  }
 }
